--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "inbounds": [
     {
       "port": 1080,
+      "listen": "0.0.0.0",
       "protocol": "socks",
       "settings": {
         "udp": true
